# agentick

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: main.rs
src/config/: mod.rs
src/hooks/: mod.rs  setup.rs
src/session/: instance.rs  mod.rs  store.rs  tokens.rs
src/tmux/: client.rs  control.rs  detector.rs  mod.rs
src/tui/: app.rs  keymap.rs  mod.rs  theme.rs  zoxide.rs
src/tui/views/: dashboard.rs  group_dialog.rs  mod.rs  new_session.rs  search.rs
